--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 { } */
 .at {
     color: white;
-    /* text-shadow: 2px 2px gray; */
+    text-shadow: 1px 1px gray;
     font-size: 2rem;
     text-anchor: end;
     font-weight: bold;
@@ -47,10 +47,12 @@ input[type="button"] {
     border: 2px solid transparent;
     border-radius: 100px;
     font-size: 1.5rem;
+    transition: 80ms;
 }
 
 input[type="button"]:hover {
     filter: brightness(95%);
+    filter: saturate(500%);
 }
 
 .container {
@@ -59,14 +61,14 @@ input[type="button"]:hover {
 
 #egg {
     border: 2px solid dodgerblue;
-    /* background-color: whitesmoke; */
+    background-color: whitesmoke;
     margin-bottom: 2em;
     vertical-align: middle;
 }
 
 .phrase {
     color: white;
-    /* text-shadow: 2px 2px gray; */
+    text-shadow: 1px 1px gray;
     font-size: 1.5rem;
     margin-bottom: 1em;
     font-weight: bold;
