--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 
 /* .input 
 { } */
+
 .at {
   color: white;
   text-shadow: 1px 1px gray;
@@ -49,9 +50,10 @@ input[type="button"] {
   border-radius: 100px;
   font-size: 1.5rem;
   transition: 80ms;
+  margin: 0 0.2em;
 }
 
-input[type="button"]:hover {
+input[type="button"]:enabled:hover {
   filter: brightness(95%);
   filter: saturate(500%);
 }
