--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 
 #name {
   font-size: 1.5rem;
-  border: 1px solid transparent;
+  border: none;
   border-top-left-radius: 100px;
   border-bottom-left-radius: 100px;
   padding-left: 0.5em;
@@ -47,7 +47,7 @@ body {
 
 input[type="button"] {
   background-color: #fbe4ff;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   border-radius: 100px;
   font-size: 1.5rem;
   transition: 80ms;
@@ -58,11 +58,11 @@ input[type="button"]:enabled:hover {
   filter: brightness(95%) saturate(500%);
 }
 
-input[type="button"]::-moz-focus-inner {
+input::-moz-focus-inner {
     outline: none;
 } 
 
-input[type="button"]:focus {
+input:focus {
     outline: none;
 }
 
@@ -93,4 +93,5 @@ input[type="button"]:focus {
 
 #download {
   width: 15em;
+  text-decoration: none;
 }
